[package]
name = "order-propagation"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
borsh = { version = "1.5.7", features = ["derive"] }
config = "0.15.14"
plotters = "0.3.7"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "codec"
harness = false
